feat: enhance CORS configuration in SecurityConfig